add check controller in auth.controller for authentication user
