# backend/src/docs/swagger.yaml
@@ -202,6 +202,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /auth/check:
+    get:
+      summary: Check User
+      tags:
+        - Authentication
+      security:
+        - bearerAuth: []
+      responses:
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 
 components:
   securitySchemes:
